src/test/ui/const-len-underflow-separate-spans.stderr
warning: attempt to subtract with overflow
  --> $DIR/const-len-underflow-separate-spans.rs:17:20
   |
LL | const LEN: usize = ONE - TWO;
   |                    ^^^^^^^^^
   |
   = note: #[warn(const_err)] on by default

error[E0080]: constant evaluation error
  --> $DIR/const-len-underflow-separate-spans.rs:17:20
   |
LL | const LEN: usize = ONE - TWO;
   |                    ^^^^^^^^^ attempt to subtract with overflow

error[E0080]: constant evaluation error
  --> $DIR/const-len-underflow-separate-spans.rs:22:17
   |
LL |     let a: [i8; LEN] = unimplemented!();
   |                 ^^^ referenced constant has errors

error: aborting due to 2 previous errors

If you want more information on this error, try using "rustc --explain E0080"
